--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,3 +1,21 @@
-git add .github/workflows/cmake-multi-platform.yml
-git commit -m "Fix CMake source directory in workflow"
-git push origin <your-branch-name>
+name: CMake on multiple platforms
+
+on: [push, pull_request]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Configure CMake
+      run: cmake -B build -S .  # Update the source directory here
+      env:
+        CXX: g++
+        CC: gcc
+
+    - name: Build
+      run: cmake --build build
+      
