--- a/github/workflows/cmake-multi-platform.yml
+++ b/github/workflows/cmake-multi-platform.yml
@@ -11,11 +11,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Configure CMake
-      run: cmake -B build -S src  # Updated the source directory to 'src'
+      run: cmake -B build -S src  # Update the source directory here
       env:
         CXX: g++
         CC: gcc
 
     - name: Build
       run: cmake --build build
-      
